tools/architecture/validate-source-imports/tests/fixtures/invalid/empty-dep-list-imports-platform/src/index.ts
import { deploy } from "@platform/feature-workflow";
export const packageName = "@platform/infra-aws";
